spacing fix to home page

--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,13 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: "Lucida Grande", Arial, "Lucida Sans Unicode", sans-serif;
 }
 
 /* navigation */
 
 .nav-content {
-    font-family: 'Oswald', sans-serif; 
+    font-family: "Lucida Grande", Arial, "Lucida Sans Unicode", sans-serif;
     padding: 0 0 0 50px;
 }
 .collapsible-nav {
@@ -98,6 +99,16 @@ a {
     text-align: center;
 }
 
+/* info section */
+
+#info-section {
+    padding-inline: 50px;
+    text-align: center;
+}
+
+#info-section p{
+    margin-bottom: 10px;
+}
 
 
 /* Page Link */
@@ -112,16 +123,36 @@ a {
 .page-link {
     display: flex;
     flex-direction: column;
-    padding: 2px 4px;
     /* border: solid black 1px; */
-    width: 220px;
+    width: 350px;
+    position: relative;
 }
 
+.link-info {
+    position: absolute;
+    top: 50%; left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+    color: white;
+    text-align: center;
+}
+
+.learn-more {
+    padding: 10px;
+}
+
+
 .link-img {
-    width: 100%;
-    height: 250px;
+    width: 100%; height: 250px;
     border-radius: 5px;
-    margin-bottom: 10px;
+}
+
+.background-tint {
+    filter: brightness(80%);
+}
+
+.background-tint:hover {
+    filter: brightness(90%);
 }
 
 /* contact */
@@ -129,7 +160,7 @@ a {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-block: 50px;
+    padding-bottom: 50px;
 }
 
 .contact-title {
